// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaSkeletonLoader renders all avatar variants 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <svg
      aria-labelledby="1ribebw-aria"
      color="#84888e"
      height="40"
      role="img"
      viewBox="0 0 40 40"
      width="40"
    >
      <title
        id="1ribebw-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#1ribebw-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#1ribebw-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="1ribebw-diff"
        >
          <rect
            height="40"
            rx="5px"
            ry="5px"
            width="40"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="1ribebw-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
    <svg
      aria-labelledby="xrws7qj-aria"
      color="#84888e"
      height="40"
      role="img"
      viewBox="0 0 40 40"
      width="40"
    >
      <title
        id="xrws7qj-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#xrws7qj-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#xrws7qj-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="xrws7qj-diff"
        >
          <rect
            height="40"
            rx="5px"
            ry="5px"
            width="40"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="xrws7qj-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
    <svg
      aria-labelledby="3xh5igt-aria"
      color="#84888e"
      height="80"
      role="img"
      viewBox="0 0 80 80"
      width="80"
    >
      <title
        id="3xh5igt-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#3xh5igt-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#3xh5igt-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="3xh5igt-diff"
        >
          <rect
            height="80"
            rx="5px"
            ry="5px"
            width="80"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="3xh5igt-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
    <svg
      aria-labelledby="aed923t-aria"
      color="#84888e"
      height="120"
      role="img"
      viewBox="0 0 120 120"
      width="120"
    >
      <title
        id="aed923t-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#aed923t-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#aed923t-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="aed923t-diff"
        >
          <rect
            height="120"
            rx="5px"
            ry="5px"
            width="120"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="aed923t-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
    <svg
      aria-labelledby="8dg2pk-aria"
      color="#84888e"
      height="160"
      role="img"
      viewBox="0 0 160 160"
      width="160"
    >
      <title
        id="8dg2pk-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#8dg2pk-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#8dg2pk-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="8dg2pk-diff"
        >
          <rect
            height="160"
            rx="5px"
            ry="5px"
            width="160"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="8dg2pk-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`MediaSkeletonLoader renders all icon variants 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <svg
      aria-labelledby="qihdp9-aria"
      color="#84888e"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
    >
      <title
        id="qihdp9-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#qihdp9-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#qihdp9-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="qihdp9-diff"
        >
          <rect
            height="16"
            rx="5px"
            ry="5px"
            width="16"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="qihdp9-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
    <svg
      aria-labelledby="ahj279-aria"
      color="#84888e"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
    >
      <title
        id="ahj279-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#ahj279-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#ahj279-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="ahj279-diff"
        >
          <rect
            height="24"
            rx="5px"
            ry="5px"
            width="24"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="ahj279-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
    <svg
      aria-labelledby="qn3o2xa-aria"
      color="#84888e"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
    >
      <title
        id="qn3o2xa-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#qn3o2xa-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#qn3o2xa-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="qn3o2xa-diff"
        >
          <rect
            height="16"
            rx="50%"
            ry="50%"
            width="16"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="qn3o2xa-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
    <svg
      aria-labelledby="tzaj3ni-aria"
      color="#84888e"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
    >
      <title
        id="tzaj3ni-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#tzaj3ni-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#tzaj3ni-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="tzaj3ni-diff"
        >
          <rect
            height="24"
            rx="50%"
            ry="50%"
            width="24"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="tzaj3ni-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`MediaSkeletonLoader renders all icon variants 2`] = `
<div>
  <div
    class="Picasso-root"
  >
    <svg
      aria-labelledby="k8siahr-aria"
      color="#84888e"
      height="32"
      role="img"
      viewBox="0 0 32 32"
      width="32"
    >
      <title
        id="k8siahr-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#k8siahr-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#k8siahr-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="k8siahr-diff"
        >
          <rect
            height="32"
            rx="5px"
            ry="5px"
            width="32"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="k8siahr-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
    <svg
      aria-labelledby="qn4a58w-aria"
      color="#84888e"
      height="32"
      role="img"
      viewBox="0 0 32 32"
      width="32"
    >
      <title
        id="qn4a58w-aria"
      >
        Loading...
      </title>
      <rect
        clip-path="url(#qn4a58w-diff)"
        height="100%"
        role="presentation"
        style="fill: url(#qn4a58w-animated-diff);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clippath
          id="qn4a58w-diff"
        >
          <rect
            height="32"
            rx="50%"
            ry="50%"
            width="32"
            x="0"
            y="0"
          />
        </clippath>
        <lineargradient
          id="qn4a58w-animated-diff"
        >
          <stop
            offset="0%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#eee"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#f5f6f7"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="1.2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
  </div>
</div>
`;
